[package]
name = "rover_postcard_protocol"
version = "0.1.0"
authors = ["Joshua Salzedo <jsalzedo0@saddleback.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rover_postcards = { git = "ssh://git@gitlab.com/saddeback_rover_2020/telecom/postcards.git", branch = "master" }

tokio-serial = "4.3.3"
postcard = "0.5.0"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tracing-futures = "0.2.4"
futures-core = "0.3.5"
futures-util = "0.3.5"
rand = "0.7.3"
bytes = { version = "0.5.6", features = ["serde"] }
chrono = "0.4.11"

[dependencies.tokio]
version = "0.2.21"
features = ["macros", "sync", "stream", "time", "io-util", "rt-core"]
